<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guuguu-test</string>
    <string name="hello">Hello my-android-application!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
     <string name="username">用户名</string>
     <string name="email">邮件</string>
     <string name="mobile">手机</string>
     <string name="password">密码</string>
     <string name="obtain">获取</string>
     <string name="register">注册</string>
</resources>